@@ -1,1 +1,1 @@
-Kommander 1.0alpha6
+Kommander 1.0alpha7
